@@ -61,6 +61,8 @@ sub childNodes
     } elsif ($parentType eq 'computer') {
         # dont look for childs in computers
         return [];
+    } elsif ($parentMetadata->{dn} =~ /^ou=Domain Controllers,/i) {
+        return $self->_sambaDomainControllers();
     } elsif ($parentMetadata->{dn} =~ /^ou=Computers,/i) {
         # FIXME: Integrate this better with the rest of the logic.
         return $self->_sambaComputers();
@@ -123,6 +125,29 @@ sub childNodes
     }
 
     return \@childNodes;
+}
+
+sub _sambaDomainControllers
+{
+    my ($self) = @_;
+
+    return [] unless EBox::Global->modExists('samba');
+
+    my $samba = EBox::Global->modInstance('samba');
+    return [] unless $samba->isEnabled();
+
+    # As the samba module is not a dependency of users, check if the function
+    # exists in the samba module because we can not force versions.
+    return [] unless EBox::Samba->can('domainControllers');
+
+    my @computers;
+    foreach my $computer (@{$samba->domainControllers()}) {
+        my $dn = $computer->dn();
+        my $printableName = $computer->name();
+        push (@computers, { id => $dn, printableName => $printableName, type => 'computer', metadata => { dn => $dn } });
+    }
+
+    return \@computers;
 }
 
 sub _sambaComputers
